--- a/пераклады модаў/Anno Domini 1259/1.2.10.1/Belarusian.Anno Domini 1259/ModuleData/Languages/BYc/language_data.xml
+++ b/пераклады модаў/Anno Domini 1259/1.2.10.1/Belarusian.Anno Domini 1259/ModuleData/Languages/BYc/language_data.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LanguageData id="Беларуская">
   <LanguageFile xml_path="BYc/reiko_fixes/elp_module_strings_xml.xml" />
+  <LanguageFile xml_path="BYc/reiko_fixes/items_1259.xml" />
   <LanguageFile xml_path="BYc/reiko_fixes/troops_fixes.xml" />
   <LanguageFile xml_path="BYc/reiko_fixes/water_settlements.xml" />
-  <LanguageFile xml_path="BYc/annoItems.xml" />
   <LanguageFile xml_path="BYc/lords_main.xml" />
   <LanguageFile xml_path="BYc/module_strings.xml" />
   <LanguageFile xml_path="BYc/settlements.xml" />
