--- a/пераклады модаў/Anno Domini 1259/1.2.10.1/Belarusian.Anno Domini 1259/ModuleData/Languages/BYl/language_data.xml
+++ b/пераклады модаў/Anno Domini 1259/1.2.10.1/Belarusian.Anno Domini 1259/ModuleData/Languages/BYl/language_data.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LanguageData id="Biełaruskaja">
   <LanguageFile xml_path="BYl/reiko_fixes/elp_module_strings_xml.xml" />
+  <LanguageFile xml_path="BYl/reiko_fixes/items_1259.xml" />
   <LanguageFile xml_path="BYl/reiko_fixes/troops_fixes.xml" />
   <LanguageFile xml_path="BYl/reiko_fixes/water_settlements.xml" />
-  <LanguageFile xml_path="BYl/annoItems.xml" />
   <LanguageFile xml_path="BYl/lords_main.xml" />
   <LanguageFile xml_path="BYl/module_strings.xml" />
   <LanguageFile xml_path="BYl/settlements.xml" />
